--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3.8"
 services:
   app:
     container_name: 'app'
-    build: './'
+    build:
+      context: './'
+      target: prod
     volumes:
       - "./:/app"
     depends_on:
@@ -13,3 +15,11 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+
+  protoc-compiler:
+    container_name: 'protoc-compiler'
+    build:
+      context: './'
+      target: protoc-compiler
+    volumes:
+      - "./:/app"
